# whatsapp-clone-backend

./: .gitignore  Dockerfile  Dockerfile.sublime-workspace  README.md  alembic.ini  command.txt  docker-compose.yaml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 142c16ce41b0_initial_migration.py  1e97e2105eac_create_tables.py  99d8a64c5d4e_edit_chattable.py  a0d381a9a304_create_tables_auto.py  a83dbf37eda2_.py  ddf4a466a2ce_create_entities.py  f9b10c6a024d_.py
app/: database.py  main.py
app/api/: api.py
app/api/v1/: api.py  auth_routes.py  chat_routes.py  file_routes.py  (+5 more)
app/auth/: auth_service.py  firebase_service.py
app/chat/: chat_service.py
app/core/: config.py
app/file/: file_service.py
app/message/: message_service.py
app/model/: add_message_request.py  calling_event_server.py  chat.py  group.py  incoming_call.py  incoming_call_client.py  incoming_call_response.py  message.py  typing_status.py  user.py  ws_message.py
app/service/: chat_service.py  file_service.py  firebase_service.py  group_service.py  message_service.py  status_service.py  user_service.py
app/user/: firebase_service.py  user_service.py
app/utils/: result_wrapper.py  util.py
data/: database.py
data/model/: __init__.py  chat.py  group.py  message.py  one_to_one_chat.py  status.py  user.py
data/repository/: chat_repository.py  group_repository.py  message_repository.py  one_to_one_chat_repository.py  status_repository.py  user_repository.py
domain/model/: chat.py  group.py  message.py  status.py  user.py
tests/: conftest.py  test_user.py
(+22 files in other folders)
