[tool.poetry]
name = "whatsapp-clone-backend"
version = "0.1.0"
description = ""
authors = ["vaibhavgoyal09 <79615436+vaibhavgoyal09@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.78.0"}
firebase-admin = "^5.2.0"
tortoise-orm = {extras = ["asyncpg"], version = "^0.19.1"}
aerich = "^0.6.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.1"


[tool.aerich]
tortoise_orm = "app.database.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
