[tool.poetry]
name = "whatsapp-clone-backend"
version = "0.1.0"
description = ""
authors = ["vaibhavgoyal09 <79615436+vaibhavgoyal09@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.78.0"}
firebase-admin = "^5.2.0"
orjson = "^3.7.2"
alembic = "^1.8.0"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.37"}
asyncpg = "^0.25.0"
fastapi-pagination = "^0.9.3"
python-multipart = "^0.0.5"
aiofiles = "^0.8.0"
motor = "^3.0.0"
databases = "^0.6.0"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
